--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "test": "set NODE_ENV=test&& mocha test/*.js --exit",
     "start": "set NODE_ENV=development&& node server.js",
     "dev": "set NODE_ENV=development&& node server.js"
-  
   },
   "keywords": [
     "javascript",
@@ -21,6 +20,7 @@
     "chai": "^4.3.6",
     "chai-http": "^4.3.0",
     "dotenv": "^16.0.1",
+    "eureka-js-client": "^4.5.0",
     "express": "^4.18.1",
     "express-async-handler": "^1.2.0",
     "mocha": "^10.0.0",
